@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/d0_blind_id
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 Jul 2011; Nikoli <nikoli@lavabit.com> d0_blind_id-9999.ebuild:
+  migrate to git-2 and EAPI4
 
 *d0_blind_id-9999 (30 Dec 2010)
 *d0_blind_id-0.1.0_pre (30 Dec 2010)
